--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,5 @@
         "squizlabs/php_codesniffer": "~2.4",
         "m6web/symfony2-coding-standard": "~3.1"
     },
-    "bin": ["bin/php-cs-fixer.php"]
+    "bin": ["bin/tonic-php-cs-fixer"]
 }
