--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "fabpot/php-cs-fixer": "1.11.*",
+        "fabpot/php-cs-fixer": "1.11.8",
         "squizlabs/php_codesniffer": "2.5.*",
         "m6web/symfony2-coding-standard": "3.1.*"
     },
