--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "fabpot/php-cs-fixer": "1.11.*",
-        "squizlabs/php_codesniffer": "2.5.*",
+        "squizlabs/php_codesniffer": "~2.5",
         "m6web/symfony2-coding-standard": "3.1.*"
     },
     "bin": ["bin/tonic-php-cs-fixer"]
